Kubernetes/CKA-ACG/temporary-pod.yaml
{
  "apiVersion": "v1",
  "kind": "Pod",
  "metadata": {
    "annotations": {
      "cni.projectcalico.org/podIP": "",
      "cni.projectcalico.org/podIPs": ""
    },
    "creationTimestamp": null,
    "labels": {
      "run": "temporary"
    },
    "name": "temporary",
    "selfLink": "/api/v1/namespaces/default/pods/temporary"
  },
  "spec": {
    "containers": [
      {
        "image": "radial/busyboxplus:curl",
        "imagePullPolicy": "IfNotPresent",
        "name": "temporary",
        "resources": {},
        "stdin": true,
        "stdinOnce": true,
        "terminationMessagePath": "/dev/termination-log",
        "terminationMessagePolicy": "File",
        "tty": true,
        "volumeMounts": [
          {
            "mountPath": "/var/run/secrets/kubernetes.io/serviceaccount",
            "name": "kube-api-access-qzdpz",
            "readOnly": true
          }
        ]
      }
    ],
    "dnsPolicy": "ClusterFirst",
    "enableServiceLinks": true,
    "nodeName": "180fde7f1f1c.mylabserver.com",
    "preemptionPolicy": "PreemptLowerPriority",
    "priority": 0,
    "restartPolicy": "Always",
    "schedulerName": "default-scheduler",
    "securityContext": {},
    "serviceAccount": "default",
    "serviceAccountName": "default",
    "terminationGracePeriodSeconds": 30,
    "tolerations": [
      {
        "effect": "NoExecute",
        "key": "node.kubernetes.io/not-ready",
        "operator": "Exists",
        "tolerationSeconds": 300
      },
      {
        "effect": "NoExecute",
        "key": "node.kubernetes.io/unreachable",
        "operator": "Exists",
        "tolerationSeconds": 300
      }
    ],
    "volumes": [
      {
        "name": "kube-api-access-qzdpz",
        "projected": {
          "defaultMode": 420,
          "sources": [
            {
              "serviceAccountToken": {
                "expirationSeconds": 3607,
                "path": "token"
              }
            },
            {
              "configMap": {
                "items": [
                  {
                    "key": "ca.crt",
                    "path": "ca.crt"
                  }
                ],
                "name": "kube-root-ca.crt"
              }
            },
            {
              "downwardAPI": {
                "items": [
                  {
                    "fieldRef": {
                      "apiVersion": "v1",
                      "fieldPath": "metadata.namespace"
                    },
                    "path": "namespace"
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  },
  "status": {
    "conditions": [
      {
        "lastProbeTime": null,
        "lastTransitionTime": "2022-02-14T16:10:44Z",
        "status": "True",
        "type": "Initialized"
      },
      {
        "lastProbeTime": null,
        "lastTransitionTime": "2022-02-22T15:50:11Z",
        "status": "True",
        "type": "Ready"
      },
      {
        "lastProbeTime": null,
        "lastTransitionTime": "2022-02-22T15:50:11Z",
        "status": "True",
        "type": "ContainersReady"
      },
      {
        "lastProbeTime": null,
        "lastTransitionTime": "2022-02-14T16:10:44Z",
        "status": "True",
        "type": "PodScheduled"
      }
    ],
    "containerStatuses": [
      {
        "containerID": "containerd://86e0aa2122682b8a710c22e406b69dc260b2b93e35f55f1801e35b2b36a69912",
        "image": "docker.io/radial/busyboxplus:curl",
        "imageID": "sha256:4776f1f7d1f625c8c5173a969fdc9ae6b62655a2746aba989784bb2b7edbfe9b",
        "lastState": {
          "terminated": {
            "containerID": "containerd://dd33e3e8da90e8199664253d8c421413d0b0cbe74e6c525d0262f373b2f6b7b4",
            "exitCode": 255,
            "finishedAt": "2022-02-22T15:49:10Z",
            "reason": "Unknown",
            "startedAt": "2022-02-22T11:44:57Z"
          }
        },
        "name": "temporary",
        "ready": true,
        "restartCount": 18,
        "started": true,
        "state": {
          "running": {
            "startedAt": "2022-02-22T15:50:09Z"
          }
        }
      }
    ],
    "hostIP": "172.31.120.252",
    "phase": "Running",
    "podIP": "10.1.2.149",
    "podIPs": [
      {
        "ip": "10.1.2.149"
      }
    ],
    "qosClass": "BestEffort",
    "startTime": "2022-02-14T16:10:44Z"
  }
}
